# SpacIMAC

./: CMakeLists.txt
TP_Spac__IMAC/: CMakeLists.txt  SDLtemplate.cpp  main_projet.cpp  main_test_cpp.cpp  test_soleil.cpp  test_soleilsave.cpp
TP_Spac__IMAC/shaders/: 3D.vs.glsl  directionallight.fs.glsl  multiTex3D.fs.glsl  multiTex3DFreeFly.fs.glsl  tex3D.fs.glsl  tex3D2.fs.glsl  tex3DFreeFly.fs.glsl
dependencies/SDL/include/SDL/: SDL.h
glimac/: CMakeLists.txt
glimac/include/glimac/: FreeflyCamera.hpp  SDLWindowManager.hpp  Shader.hpp  TrackballCamera.hpp  common.hpp  torus.hpp
glimac/include/project/: AppManager.hpp  Astre.hpp  Planete.hpp  Planete_gazeuse.hpp  Planete_tellurique.hpp  RenderManager.hpp  Satellite.hpp  Soleil.hpp  Texte.hpp  Time.hpp
glimac/src/glimac/: FreeflyCamera.cpp  Program.cpp  SDLWindowManager.cpp  Sphere.cpp  TrackballCamera.cpp  torus.cpp
glimac/src/project/: AppManager.cpp  Astre.cpp  Planete.cpp  Planete_gazeuse.cpp  Planete_tellurique.cpp  RenderManager.cpp  Satellite.cpp  Soleil.cpp  Texte.cpp  Time.cpp
